--- a/Fundoo/src/app/components/dashboard/dashboard.component.scss
+++ b/Fundoo/src/app/components/dashboard/dashboard.component.scss
@@ -30,23 +30,23 @@
   }
 
   .notes{
-    padding-left: 50px;
+    padding-left: 20%;
   }
 
   .remainders{
-    padding-left: 50px;
+    padding-left: 20%;
   }
 
   .labels{
-    padding-left: 50px;
+    padding-left: 20%;
   }
 
   .archive{
-    padding-left: 50px;
+    padding-left: 20%;
   }
 
   .trash{
-    padding-left: 50px;
+    padding-left: 20%;
   }
 
   .navList{
@@ -55,6 +55,13 @@
 
   #para{
     padding-left: 20px;
+  }
+
+  // .profileMenu{
+  //   width: 10%;
+  // }
+  .name{
+    padding-left: 10%;
   }
 
 
