--- a/Fundoo/src/app/components/maincard/maincard.component.html
+++ b/Fundoo/src/app/components/maincard/maincard.component.html
@@ -19,38 +19,32 @@
 
 
 
-
-
-
 <div *ngIf="flag==false" fxLayout="row" fxLayoutAlign="space-around start" fxFlex="100">
 
   <mat-card fxLayout="column" class="matcard" fxFlex="50" fxFlexOffset.xl="20" fxFlex.xs='97'
     [style.backgroundColor]="color">
-    <div fxLayout="row" fxLayoutAlign="end start">
-      <button mat-icon-button color="basic" (click)="pinned()">
-        <!-- <div class="barpin" *ngIf="flag1==true"> -->
-
-          <!-- <img src="../../../assets/image/note.svg" /> -->
-
-        <!-- </div> -->
-        <div class="barpin" *ngIf="flag1==false">
-          <img src="../../../assets/barpin.svg">
+      <div fxLayout="row" fxLayoutAlign="end start">
+        <button mat-icon-button color="basic" (click)="pinned()">
+          <!-- <div class="barpin" *ngIf="flag1==true"> -->
+  
+            <!-- <img src="../../../assets/image/note.svg" /> -->
+  
+          <!-- </div> -->
+          <div class="barpin" *ngIf="flag1==false">
+            <img src="../../../assets/barpin.svg">
+          </div>
+          <div class="pin" *ngIf="flag1==true">
+            <img src="../../../assets/pin.svg">
+          </div>
+        </button>
+      </div>
+        <div contenteditable="true" data-text="Title" fxFlex="30"  [formControl]="noteTitle"
+          fxLayout="column" class="title">
         </div>
-        <div class="barpin" *ngIf="flag1==true">
-          <img src="../../../assets/pin.svg">
-        </div>
-      </button>
-    </div>
-    <div contenteditable="true" data-text="Title" fxFlex="30" id="noteContent" [formControl]="noteTitle"
-      fxLayout="column" class="title">
-    </div>
-
-
-
     <!-- <div contenteditable="true" data-text="Take a note.." class="Border" fxLayout="column" class="takenote">
     </div> -->
     <div class="Border" fxLayout="column" class="takenote">
-      <textarea class="textArea" matTextareaAutosize placeholder="Take a note.. " [formControl]="noteContent"
+      <textarea class="textArea" matTextareaAutosize placeholder="Take a note.. "  [formControl]="noteContent"
         class="textArea"></textarea>
     </div>
     <div fxFlex="10" fxLayout="row" fxLayoutAlign="space-between end">
