--- a/Fundoo/src/app/components/dashboard/dashboard.component.html
+++ b/Fundoo/src/app/components/dashboard/dashboard.component.html
@@ -33,8 +33,7 @@
           </button>
         </div>
         <div>
-          <button mat-icon-button color="basic" id="grid" matTooltip="grid" (click)="Change()" (click)="grid()"
-            (click)="listView()">
+          <button mat-icon-button color="basic" id="grid" matTooltip="grid">
             <mat-icon>border_all</mat-icon>
           </button>
         </div>
@@ -75,29 +74,13 @@
             </div> -->
             <div>
               <button mat-mini-fab color="accent">M</button>
-              <!-- <h5>Mohit Kumar</h5>
-              <h6>mohitkr1301@gmail.com</h6> -->
               <span class="name">Mohit Kumar</span>
-              <!-- <div>
-                Mohit Kumar
-                <p>mohitkr1301@gmail.com</p>
-              </div> -->
-              <!-- <div>mohitkr1301@gmail.com</div> -->
             </div>
           </button>
           <mat-divider></mat-divider>
-          <!-- <div fxLayoutAlign="center center">
-              <button mat-menu-item (click)="addAccount()">Add account</button>
-          </div> -->
-          <!-- <mat-divider></mat-divider> -->
           <div fxLayoutAlign="center center">
               <button mat-menu-item (click)="signOut()">Sign out</button>
           </div>
-          
-            <!-- <div>
-             
-            </div> -->
-          
         </mat-menu>
       </div>
     </mat-toolbar>
@@ -149,40 +132,3 @@
   </mat-sidenav-content>
 </mat-sidenav-container>
 </div>
-
-
-
-
-
-<!-- <div>
-    <div>
-      <button mat-button>
-        <mat-icon matSuffix>settings_cell</mat-icon>
-        Notes
-      </button>
-    </div>
-    <div>
-      <button mat-button>
-        <mat-icon matSuffix>settings_cell</mat-icon>
-        Reminders
-      </button>
-    </div>
-    <div>
-      <button mat-button>
-        <mat-icon matSuffix>settings_cell</mat-icon>
-        Edit labels
-      </button>
-    </div>
-    <div>
-      <button mat-button>
-        <mat-icon matSuffix>archive</mat-icon>
-        Archive
-      </button>
-    </div>
-    <div>
-      <button mat-button>
-        <mat-icon matSuffix>restore_from_trash</mat-icon>
-        Trash
-      </button>
-    </div>
-  </div> -->
