--- a/Fundoo/src/app/components/note/note.component.html
+++ b/Fundoo/src/app/components/note/note.component.html
@@ -10,8 +10,8 @@
 <!-- display card -->
 
 
-<app-display-notes [cardsArray]=(card) ></app-display-notes>
-
+<app-display-notes ></app-display-notes>
+<!-- <app-display-notes [cardsArray]=(card) ></app-display-notes> -->
 
 
 
