--- a/Fundoo/src/app/components/display-trash/display-trash.component.html
+++ b/Fundoo/src/app/components/display-trash/display-trash.component.html
@@ -24,7 +24,7 @@
             <div>{{items.description}}</div>
             <div class="icons-div">
               <app-icon-list fxLayout="row" [card]="items" fxLayoutAlign="space-between end"
-                (colorchange)="changeOfColor($event)" (childObject)="update($event)">
+                (colorchange)="changeOfColor($event)">
               </app-icon-list>
             </div>
           </div>
