--- a/Fundoo/src/app/components/icon-list/icon-list.component.html
+++ b/Fundoo/src/app/components/icon-list/icon-list.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayoutAlign="start end" fxFlex="100">
+<div fxLayout="row" fxFlex="100" fxLayoutAlign="start end">
   <button id="Remind" matTooltip="Remind me" mat-icon-button>
     <img id="remindmeImage" src="../../../assets/remindme.svg" />
   </button>
