--- a/Fundoo/src/app/components/display-archive/display-archive.component.html
+++ b/Fundoo/src/app/components/display-archive/display-archive.component.html
@@ -23,7 +23,7 @@
             </div>
             <div>{{items.description}}</div>
             <div class="icons-div">
-              <app-icon-list fxLayout="row" [card]="items" fxLayoutAlign="space-between end"
+              <app-icon-list fxLayout="row" [card]="items" (updateEvent)=update($event) fxLayoutAlign="space-between end"
                 (colorchange)="changeOfColor($event)" (childObject)="update($event)">
               </app-icon-list>
             </div>
