--- a/Fundoo/src/app/components/display-notes/display-notes.component.html
+++ b/Fundoo/src/app/components/display-notes/display-notes.component.html
@@ -7,7 +7,7 @@
         <mat-card class="minicard" [style.backgroundColor]="items.color">
           <div>
             <div fxLayout="row" class="title">
-              <span (click)="getNoteId(items)">{{items.title}}</span>
+              <span (click)="openDialog(items)">{{items.title}}</span>
               <!-- <button mat-icon-button color="basic" (click)="pinned(items)" fxLayoutAlign="end start">
                   <div class="barpin" *ngIf="flag1==false">
                     <img src="../../../assets/barpin.svg">
@@ -24,7 +24,7 @@
             <div>{{items.description}}</div>
             <div class="icons-div">
               <app-icon-list fxLayout="row" [card]="items" (updateEvent)=update($event) fxLayoutAlign="space-between end"
-                (colorchange)="changeOfColor($event)" (childObject)="update($event)">
+                (colorchange)="changeOfColor($event)">
               </app-icon-list>
             </div>
           </div>
