--- a/Fundoo/src/app/components/dashboard/dashboard.component.html
+++ b/Fundoo/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,7 @@
 <div class="example-container" [class.example-is-mobile]="mobileQuery.matches">
+
+<!-- Toolbar Display -->
+
   <div fxLayout="row">
     <mat-toolbar class="example-toolbar">
       <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="3%" fxFlex="18">
@@ -22,7 +25,7 @@
             <mat-icon>search</mat-icon>
           </button>
           <input fxFlex="90" type="input" matInput placeholder="Search" [style.fontSize.px]="18" class="searchText"
-             autocomplete="off">
+            autocomplete="off">
           <!-- /*[(ngModel)]="Search"*/ -->
         </mat-form-field>
       </div>
@@ -79,56 +82,68 @@
           </button>
           <mat-divider></mat-divider>
           <div fxLayoutAlign="center center">
-              <button mat-menu-item (click)="signOut()">Sign out</button>
+            <button mat-menu-item (click)="signOut()">Sign out</button>
           </div>
         </mat-menu>
       </div>
     </mat-toolbar>
   </div>
-<mat-divider></mat-divider>
-<mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
-  <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches"
-    fixedTopGap="56">
-    <mat-nav-list class="navList">
-      <mat-list role="list">
-        <div>
-          <mat-list-item role="listitem" routerLinkActive="router-link-active" (click)="Note()">
-            <img id="img1" src="../../../assets/noteImg.svg" />
-            <span class="notes">Notes</span>
-          </mat-list-item>
-        </div>
-        <div>
-          <mat-list-item role="listitem" routerLinkActive="router-link-active" (click)="Remainder()">
-            <img id="img2" src="../../../assets/remainder.svg" />
-            <span class="remainders">Remainders</span>
-          </mat-list-item>
-        </div>
-        <mat-divider></mat-divider>
-        <div>
-          <p id="para">LABELS</p>
-          <mat-list-item role="listitem" routerLinkActive="router-link-active" (click)="editLabels()">
-            <img id="img2" src="../../../assets/editLabel.svg" />
-            <span class="labels">Edit labels</span>
-          </mat-list-item>
-        </div>
-        <mat-divider></mat-divider>
-        <div>
-          <mat-list-item role="listitem" routerLinkActive="router-link-active" (click)="archive()">
-            <img id="img3" src="../../../assets/archive.svg" />
-            <span class="archive">Archive</span>
-          </mat-list-item>
-        </div>
-        <div>
-          <mat-list-item role="listitem" routerLinkActive="router-link-active" (click)="trash()">
-            <img id="img3" src="../../../assets/trash.svg" />
-            <span class="trash">Trash</span>
-          </mat-list-item>
-        </div>
-      </mat-list>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <router-outlet></router-outlet>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+  <mat-divider></mat-divider>
+
+<!-- Side-Menu-Display -->
+
+  <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches"
+      fixedTopGap="56">
+      <mat-nav-list class="navList">
+        <mat-list role="list">
+          <div>
+            <mat-list-item role="listitem" routerLinkActive="router-link-active" (click)="Note()">
+              <img id="img1" src="../../../assets/noteImg.svg" />
+              <span class="notes">Notes</span>
+            </mat-list-item>
+          </div>
+          <div>
+            <mat-list-item role="listitem" routerLinkActive="router-link-active" (click)="Remainder()">
+              <img id="img2" src="../../../assets/remainder.svg" />
+              <span class="remainders">Remainders</span>
+            </mat-list-item>
+          </div>
+          <mat-divider></mat-divider>
+          <div>
+            <p id="para">LABELS</p>
+            <div *ngFor="let item of label" class="label">
+              <mat-list-item role="listitem" routerLinkActive="router-link-active">
+                <img id="img1" src="../../../assets/label.svg" />
+                <span class="notes">{{item.name}}</span>
+              </mat-list-item>
+              <!-- <button mat-button>{{item.name}}</button> -->
+            </div>
+            <div>
+              <mat-list-item role="listitem" routerLinkActive="router-link-active" (click)="editLabels()">
+                <img id="img2" src="../../../assets/editLabel.svg" />
+                <span class="labels">Edit labels</span>
+              </mat-list-item>
+            </div>
+          </div>
+          <mat-divider></mat-divider>
+          <div>
+            <mat-list-item role="listitem" routerLinkActive="router-link-active" (click)="archive()">
+              <img id="img3" src="../../../assets/archive.svg" />
+              <span class="archive">Archive</span>
+            </mat-list-item>
+          </div>
+          <div>
+            <mat-list-item role="listitem" routerLinkActive="router-link-active" (click)="trash()">
+              <img id="img3" src="../../../assets/trash.svg" />
+              <span class="trash">Trash</span>
+            </mat-list-item>
+          </div>
+        </mat-list>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
 </div>
