--- a/Fundoo/src/app/components/display-notes/display-notes.component.html
+++ b/Fundoo/src/app/components/display-notes/display-notes.component.html
@@ -3,30 +3,85 @@
 
     <!-- <div *ngFor="let items of cardsArray" class="card"> -->
     <div *ngFor="let items of card" class="card">
-      <div *ngIf="items.archive==false && items.trash==false">
+
+      <div *ngIf="items.archive==false && items.trash==false && items.pinned==true">
         <mat-card class="minicard" [style.backgroundColor]="items.color">
-          <div>
+          <div fxLayout="row" fxLayoutAlign="space-between start">
             <div fxLayout="row" class="title">
               <span (click)="openDialog(items)">{{items.title}}</span>
-              <!-- <button mat-icon-button color="basic" (click)="pinned(items)" fxLayoutAlign="end start">
-                  <div class="barpin" *ngIf="flag1==false">
-                    <img src="../../../assets/barpin.svg">
-                  </div>
-                  <div class="pin" *ngIf="flage1==true">
-                    <img src="../../../assets/pin.svg">
-                  </div>
-              </button> -->
+            </div>
+            <div>
+              <button mat-icon-button color="basic" (click)="pinned(items)">
+                <div class="pin" *ngIf="items.pinned==false">
+                  <img src="../../../assets/pin.svg">
+                </div>
+                <div class="barpin" *ngIf="items.pinned==true">
+                  <img src="../../../assets/barpin.svg">
+                </div>
+              </button>
+            </div>
+          </div>
 
-              <!-- <div fxLayout="row" fxLayoutAlign="end start">
-              <button mat-icon-button></button>
-            </div> -->
+          <div>{{items.description}}</div>
+
+          <!-- <div class="example-chip-list">
+            <mat-chip-list #chipList>
+              <mat-chip *ngFor="let label of labelOfNote" [selectable]="selectable"
+                       [removable]="removable" (removed)="remove(label)">
+                {{label.name}}
+                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+              </mat-chip>
+            </mat-chip-list>
+          </div> -->
+
+          <div class="icons-div">
+            <app-icon-list fxLayout="row" [card]="items" (updateEvent)=update($event) fxLayoutAlign="space-between end"
+              (colorchange)="changeOfColor($event)">
+            </app-icon-list>
+          </div>
+        </mat-card>
+      </div>
+
+
+
+
+
+
+      <div *ngIf="items.archive==false && items.trash==false && items.pinned==false">
+        <mat-card class="minicard" [style.backgroundColor]="items.color">
+          <div fxLayout="row" fxLayoutAlign="space-between start">
+            <div fxLayout="row" class="title">
+              <span (click)="openDialog(items)">{{items.title}}</span>
             </div>
-            <div>{{items.description}}</div>
-            <div class="icons-div">
-              <app-icon-list fxLayout="row" [card]="items" (updateEvent)=update($event) fxLayoutAlign="space-between end"
-                (colorchange)="changeOfColor($event)">
-              </app-icon-list>
+            <div>
+              <button mat-icon-button color="basic" (click)="pinned(items)">
+                <div class="pin" *ngIf="items.pinned==false">
+                  <img src="../../../assets/pin.svg">
+                </div>
+                <div class="barpin" *ngIf="items.pinned==true">
+                  <img src="../../../assets/barpin.svg">
+                </div>
+              </button>
             </div>
+          </div>
+          <!-- <div fxLayout="row" fxLayoutAlign="end start">
+                  <button mat-icon-button></button>
+                </div> -->
+
+          <div>{{items.description}}</div>
+          <div class="example-chip-list">
+            <mat-chip-list #chipList>
+              <mat-chip *ngFor="let label of labelOfNote" [selectable]="selectable"
+                       [removable]="removable" (removed)="remove(label)">
+                {{label.name}}
+                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+              </mat-chip>
+            </mat-chip-list>
+          </div>
+          <div class="icons-div">
+            <app-icon-list fxLayout="row" [card]="items" (updateEvent)=update($event) fxLayoutAlign="space-between end"
+              (colorchange)="changeOfColor($event)">
+            </app-icon-list>
           </div>
         </mat-card>
       </div>
